Fix background not working on mobile

--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ section {
     text-align: center;
     padding: 15px 0;
 
-    backdrop-filter: blur(5px) brightness(40%);
+    /* backdrop-filter: blur(5px) brightness(40%); */
+    background-color: rgba(0, 0, 0, 0.6);
     display: flex;
     align-items: center;
 }
